# avif-app

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avif.rs  commands.rs  config.rs  history.rs  lib.rs  main.rs  template.rs  uploader.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.vue  main.js  style.css
ui/src/components/: FormField.vue  FormSection.vue  NavItem.vue  TabHistory.vue  TabLink.vue  TabS3.vue  TabShortcut.vue  TabUpload.vue  ToggleSwitch.vue
ui/src/components/icons/: IconClipboard.vue  IconFolder.vue  IconHistory.vue  IconKeyboard.vue  IconLink.vue  IconServer.vue  IconUpload.vue
