[package]
name = "avif-image"
version = "0.1.0"
edition = "2021"

[lib]
name = "avif_image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 图像处理
image = "0.25.6"
uuid = { version = "1", features = ["v4"] }
ravif = "0.13.0"
rgb = "0.8"

# AWS S3
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }

# 配置 & 工具
toml = "1"
anyhow = "1"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.6.1"

# 日志
log = "0.4"
env_logger = "0.11"
